Added several features, fixed existing themes, fixed several bugs.

--- a/static/css/happyday.css
+++ b/static/css/happyday.css
@@ -1,32 +1,32 @@
 body {
-    background: #FFFFEE url(' data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAADICAIAAACmkByiAAAAWElEQVR4AaWSwQ3AIAwDbfbfpdt0nKrPUp3QCfHgkfjsCMh47mskmU5HGvbmuuh9dVce8M4it/SfMZglGeZx/ccyu/Vsv4/N29f331AY5Bi3+hdo4A92+wXvCwR9mXztrAAAAABJRU5ErkJggg==') repeat-x 50% 0%;
-    color: #800000;
+    background: #eef8f0;
+    color: #364041;
     font-family: arial, helvetica, sans-serif;
 }
 a {
-    color: #00E;
+    color: #34345c;
 }
 
 .innerPost {
-    background-color: #f0e0d6;
-    border: 1px solid #D9BFB7;
+    background-color: #d6f0da;
+    border: 1px solid #cccccc;
     border-left: none;
     border-top: none;
 }
 .markedPost {
-    background-color: #F0C0B0;
-    border: 1px solid #800000;
+    background-color: #A8BDAB;
+    border: 1px solid #000;
 }
 .divMessage {
-    color: #800000;
+    color: #364041;
 }
 .labelCreated, 
 .linkQuote, 
 .linkSelf {
-    color: #800000;
+    color: #34345c;
 }
 .labelSubject {
-    color: #cc1105;
+    color: #0f0c5d;
 }
 .labelOmission{
     color: #707070;
@@ -35,13 +35,13 @@ a {
     background: #F0C0B0;
 }
 nav {
-    background-color: #FEDBB6;
+    background-color: #d6f0da;
     border-bottom: none;
 }
 #postingForm th {
-    background-color: #EEAA88;
-    color: #800000;
-    border: 1px solid #800;
+    background-color: #d6f0da;
+    color: #364041;
+    border: 1px solid #cccccc;
 }
 #postingForm td {
     background-color: transparent;
@@ -60,12 +60,12 @@ nav {
     background: #F0E0D6;
 }
 .floatingMenu {
-    background-color: #F0C0B0;
-    border: 1px solid #D99F91;
+    background-color: #d6f0da;
+    border: 1px solid #cccccc;
 }
 
 .coloredIcon {
-   color: #800000;
+   color: #364041;
 }
 
 .linkName.noEmailName {
@@ -73,55 +73,59 @@ nav {
 }
 
 .table_h2 {
-  background: #fca;
+  background: #d6f0da;
 }
 
 .linkBoxes li, .tableOutside {
-  border: 1px solid #800000;
+  border: 1px solid #cccccc;
 }
 
 .linkBoxes li {
-  background: #fed;
+  background: #d6f0da;
   border-left: none;
 }
 
 .linkBoxes li.first {
-  border-left: 1px solid #800000;
+  border-left: 1px solid #cccccc;
 }
 
 .boardBox a, .linkBoxes a, .span {
-  color: #800;
+  color: #364041;
 }
 
 .tableOutside {
-  background: #fff;
+  background: #eef8f0;
 }
 
 .modalDecorationPanel {
-  background: #f0e0d6;
+  background: #d6f0da;
 }
 
 #labelName, #labelDescription {
-  color: #800000;
+  color: #34345c;
 } 
 
 hr {
-  border-color: #D9BFB7;
+  border-color: #cccccc;
 }
 
 .reportFieldset {
-  border: 1px solid #D9BFB7;
+  border: 1px solid #cccccc;
 }
 
 span.spoiler:hover {
-  color: #800;
+  color: #364041;
 }
 
 #settingsFieldset {
-  border: 1px solid #800000;
+  border: 1px solid #cccccc;
 }
 
 a:hover, #watcherButton:hover {
-    color:#FF3300!important;
-  text-decoration: underline;
+    color:#FF3300 !important;
+   text-decoration: underline;
+}
+
+.linkBoxes a {
+   color: #364041;
 }
