--- a/templates/pages/catalog.html
+++ b/templates/pages/catalog.html
@@ -276,7 +276,9 @@
   </div></center>
 
 <hr>
-
+<div class = "bAnnounce">
+<p id="globalAnnouncement"></p>
+</div>
 <hr>
 <div id="topLinksCatalog">
   <div
@@ -335,5 +337,6 @@
 <script src="/.static/js/draggable.js"></script>
 <script src="/.static/js/watcher.js"></script>
 <script src="/.static/js/favouriteBoards.js"></script>
+<script src="/.static/js/globalAnnouncement.js"></script>
 
 </html>
