--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -66,7 +66,7 @@
 <h2 class = "table_h2">Boards</h2>
 <div class = "boardBox">
 <ol style="list-style-type:none;">
-<li><u>SFW</u></li>
+<li><b><u>SFW</u></b></li>
 <li><a href="/a/">Anime & Manga</a></li>
 <li><a href="/meta/">Development and Feedback</a></li>
 <li><a href="/g/">Technology</a></li>
@@ -76,7 +76,7 @@
 
 <div class = "boardBox">
 <ol style="list-style-type:none;">
-<li><u>NSFW</u></li>
+<li><b><u>NSFW</u></b></li>
 <li><a href="/pol/">Politics</a></li>
 <li><a href="/b/">Random</a></li>
 <li><a href="/v9k/">Virgin9000</a></li>
