--- a/static/css/global.css
+++ b/static/css/global.css
@@ -56,6 +56,7 @@ a {
 }
 
 a:hover, .glowOnHover:hover {
+  text-decoration: underline;
   text-shadow: 0px 0px 0px #81a2be;
 }
 
@@ -669,3 +670,10 @@ div.tableOutside p {
   font-size: 10pt;
 }
 
+.indicatorSfw {
+  font-weight: bold;
+}
+
+.originalNameLink {
+  text-decoration: underline;
+}
