Added several features, especially those that would make the site much easier to maintain over time.

--- a/static/css/catalog.css
+++ b/static/css/catalog.css
@@ -5,7 +5,6 @@
 
 #catalogId {
   text-align: center;
-  margin: 1.5em 0 1em 0;
 }
 
 .catalogCell {
@@ -44,4 +43,8 @@
 
 .threadStats {
   font-size: 75%;
+}
+
+.boardHeader #favouriteButton {
+  font-size: 83%;
 }
