--- a/static/css/global.css
+++ b/static/css/global.css
@@ -677,3 +677,8 @@ div.tableOutside p {
 .originalNameLink {
   text-decoration: underline;
 }
+
+#divTools {
+  margin-bottom: -4px;
+  margin-top: -3px;
+}
