--- a/templates/pages/apply.html
+++ b/templates/pages/apply.html
@@ -57,39 +57,37 @@
   </header>
 
 <center>
-<h1>Contact</h1>
-<p class="nonBoardSubText">General Questions, Suggestions, and DMCA Takedowns</p>
+<h1>Janitor Application</h1>
+<p class="nonBoardSubText">Apply to become a volunteer</p>
 
 <div class = "gAnnounce">
 <p id="globalAnnouncement"></p>
 </div>
 
 <div class = "tableOutside">
-<h2 class = "table_h2">General Questions and Suggestions</h2>
-<p>Email: admin@117chan.org   [admin (at) 117.org]</p>
-<p>If you want an answer from a non-administrator you can also, post a reply to the <a href="/meta/">General Improvement Thread</a> on /meta/ or start a new thread on /meta/.</p>
+<h2 class = "table_h2">How to Apply</h2>
+<p></p>
 </div>
 
-<div class = "tableOutside">
-<a id="legal"></a><h2 class = "table_h2">DMCA Takedowns</h2>
-<p>If you are a copyright holder of an image/video/file and would like it removed send a <b>PROPERLY-FORMATED</b> DMCA Takedown Notice to legal@117chan.org   [legal (at) 117chan.org].</p>
-<p>For legal reasons, DMCA Takedown Notices <b>MUST</b> include the following:</p>
-<ol style="1">
-<li>Name or Company Name</li>
-<li>Address</li>
-<li>Daytime telephone</li>
-<li>Email address</li>
-<li>Name or title of Work(s) to be removed</li>
-<li>URLs of offending files or posts</li>
-</ol>
-<p>In addition, please note that all DMCA take downs are publically logged and availble to users of the site for transparency purposes. If you are a user and would like to view previous DMCA takedowns click <a href="/logs.js">here</a>.</p>
+<div class = "linkBoxes">
+<ul>
+<li class = "first"><a href="/">Home</a></li>
+<li><a href="/.static/faq.html">FAQ</a></li>
+<li><a href="/.static/globalRules.html">Rules</a></li>
+<li><a href="/.static/contact.html">Contact</a></li>
+<li><a href="/logs.js">Logs</a></li>
+<li><a href="/graphs.js">Daily Graphs</a></li>
+<li><a href="/account.js">Account</a></li>
+<ul>
 </div>
-
-<div id="buttonType"></div>
 
 </center>
 
-<div class="footerBar" id="footerBarType" value="A"></div>
+<footer>
+<div class = "footerBar"><a href="/.static/faq.html#faq1">About</a> • <a href="/meta/res/1.html#">Feedback</a> • <a href="/.static/contact.html#legal">Legal</a> • <a href="/.static/contact.html">Contact</a></div>
+<br />
+Copyright © 2018 117chan Development Team.
+</footer>
 </body>
 
 <script src="/.static/js/settings.js"></script>
@@ -99,7 +97,5 @@
 <script src="/.static/js/watcher.js"></script>
 <script src="/.static/js/favouriteBoards.js"></script>
 <script src="/.static/js/globalAnnouncement.js"></script>
-<script src="/.static/js/buttonInject.js"></script>
-<script src="/.static/js/footerInject.js"></script>
 
 </html>
