--- a/templates/pages/board.html
+++ b/templates/pages/board.html
@@ -416,10 +416,7 @@
     </form>
   </div>
  
-<footer id="footer">All trademarks and copyrights on this page are owned by their respective parties. Images uploaded are the responsibility of the Poster. Comments are owned by the Poster.
-<br />
-<div class = "footerBar"><a href="/.static/faq.html#faq1">About</a> • <a href="/meta/res/1.html#">Feedback</a> • <a href="/.static/contact.html#legal">Legal</a> • <a href="/.static/contact.html">Contact</a></div>
-</footer>
+<div class="footerBar" id="footerBarType" value="B"></div>
 
 </body>
 
@@ -443,5 +440,6 @@
 <script src="/.static/js/favouriteBoards.js"></script>
 <script src="/.static/js/globalAnnouncement.js"></script>
 <script src="/.static/js/hideThread.js"></script>
+<script src="/.static/js/footerInject.js"></script>
 
 </html>
