--- a/templates/pages/boards.html
+++ b/templates/pages/boards.html
@@ -108,16 +108,13 @@
   </div>
 <hr>
 
-<footer>
-<div class = "footerBar"><a href="/.static/faq.html#faq1">About</a> • <a href="/meta/res/1.html#">Feedback</a> • <a href="/.static/contact.html#legal">Legal</a> • <a href="/.static/contact.html">Contact</a></div>
-<br />
-Copyright © 2018 117chan Development Team.
-</footer>
-</center>
+<div class="footerBar" id="footerBarType" value="A"></div>
+
 </body>
 
 <script src="/.static/js/settings.js"></script>
 <script src="/.static/js/themes.js"></script>
 <script src="/.static/js/favouriteBoards.js"></script>
+<script src="/.static/js/footerInject.js"></script>
 
 </html>
