--- a/templates/pages/catalog.html
+++ b/templates/pages/catalog.html
@@ -64,12 +64,19 @@
     </span>
   </nav>
 
+  <header class="boardHeader">
+    <img id="bannerImagePull" />
+  </header>
   <p id="catalogId">
-    <span class="title">Catalog of </span>
+    <span class="catalogText">Catalog of </span>
     <a
       href="."
       id="labelBoard"></a>
   </p>
+
+
+
+
 
 <center><div id="wholePostingForm">
   <div class="postingForm">
@@ -284,7 +291,7 @@
   <div
     id="divTools"
     class="hidden">
-[<a href="./">Return</a>] [<a href="#footer">Bottom</a>] [<a href="./catalog.html">Refresh</a>]&nbsp;
+[<a href="./">Index</a>] [<a href="#footer">Bottom</a>] [<a href="./catalog.html">Refresh</a>]&nbsp;
 
 <div class="tempRefreshLynx">
     (
@@ -314,7 +321,7 @@
     class="catalogDiv"></div>
 <hr>
 <div id="bottomLinksCatalog">
-[<a href="./">Return</a>] [<a href="#">Top</a>] [<a href="./catalog.html">Refresh</a>]
+[<a href="./">Index</a>] [<a href="#">Top</a>] [<a href="./catalog.html">Refresh</a>]
 </div>
 <hr>
 
@@ -338,5 +345,6 @@
 <script src="/.static/js/watcher.js"></script>
 <script src="/.static/js/favouriteBoards.js"></script>
 <script src="/.static/js/globalAnnouncement.js"></script>
+<script src="/.static/js/pullBoardBanner.js"></script>
 
 </html>
