--- a/templates/pages/overboard.html
+++ b/templates/pages/overboard.html
@@ -14,6 +14,10 @@
   type="text/css"
   rel="stylesheet" />
 <link
+  href="/.static/css/overboard.css"
+  type="text/css"
+  rel="stylesheet" />
+<link
   href="/.static/css/thread.css"
   type="text/css"
   rel="stylesheet" />
@@ -53,6 +57,12 @@
   </header>
 
 <hr>
+
+<div class = "bAnnounce">
+<p id="globalAnnouncement"></p>
+</div>
+
+<hr>
 <div id="topLinksOverboard">
 [<a href="/">Return</a>] [<a href="#footer">Bottom</a>] [<a href="/overboard/">Refresh</a>]
 </div>
@@ -81,10 +91,9 @@
 [<a href="/">Return</a>] [<a href="#">Top</a>] [<a href="/overboard/">Refresh</a>]
 </div>
 <hr>
-<footer id="footer">All trademarks and copyrights on this page are owned by their respective parties. Images uploaded are the responsibility of the Poster. Comments are owned by the Poster.
-<br />
-<div class = "footerBar"><a href="/.static/about.html">About</a> • <a href="/meta/">Feedback</a> • <a href="/.static/legal.html">Legal</a> • <a href="/.static/contact.html">Contact</a></div>
-</footer>
+
+<div class="footerBar" id="footerBarType" value="B"></div>
+
 </div>
 
 <script src="/.static/js/settings.js"></script>
@@ -106,5 +115,7 @@
 <script src="/.static/js/postingMenu.js"></script>
 <script src="/.static/js/captchaModal.js"></script>
 <script src="/.static/js/favouriteBoards.js"></script>
+<script src="/.static/js/globalAnnouncement.js"></script>
+<script src="/.static/js/footerInject.js"></script>
 
 </html>
