--- a/static/css/happyday.css
+++ b/static/css/happyday.css
@@ -32,7 +32,7 @@ a {
     color: #707070;
 }
 #watchedMenu {
-    background: #F0C0B0;
+    background: #d6f0da;
 }
 nav {
     background-color: #d6f0da;
