--- a/templates/pages/thread.html
+++ b/templates/pages/thread.html
@@ -417,13 +417,18 @@
 
   </div>
 
+<hr>
+<div class = "bAnnounce">
+<p id="globalAnnouncement"></p>
+</div>
+
   <div id="panelMessage">
     <hr>
     <div id="divMessage"></div>
-    <hr>
   </div>
 
 <div class = "topLinks">
+<hr>
 [<a href="..">Return</a>] [<a href="../catalog.html">Catalog</a>] [<a href="#footer">Bottom</a>] [<a href="#null" id="refreshButton" onclick="refreshPosts(true)" value="Refresh">Update</a>]
         [<label>
           <input
@@ -441,16 +446,8 @@
       </div>
 </div>
 
-<script>
-function returnToPage() {
-    window.history.back();
-}
-</script>
-
   <div id="threadList">
-
       <div id="divThreads"></div>
-
       <hr class="clearer" />
 
 
@@ -648,16 +645,7 @@ function returnToPage() {
     </form>
 
   </div>
-<script>
-function toggleBoxes() {
-    var x = document.getElementById("hiddenboxes");
-    if (x.style.display === "none") {
-        x.style.display = "block";
-    } else {
-        x.style.display = "none";
-    }
-}
-</script> 
+
 <footer id="footer">All trademarks and copyrights on this page are owned by their respective parties. Images uploaded are the responsibility of the Poster. Comments are owned by the Poster.
 <br />
 <div class = "footerBar"><a href="/.static/faq.html#faq1">About</a> • <a href="/meta/res/1.html#">Feedback</a> • <a href="/.static/contact.html#legal">Legal</a> • <a href="/.static/contact.html">Contact</a></div>
@@ -684,5 +672,7 @@ function toggleBoxes() {
 <script src="/.static/js/postingMenu.js"></script>
 <script src="/.static/js/gallery.js"></script>
 <script src="/.static/js/favouriteBoards.js"></script>
+<script src="/.static/js/globalAnnouncement.js"></script>
+<script src="/.static/js/hideThread.js"></script>
 
 </html>
