--- a/templates/pages/catalog.html
+++ b/templates/pages/catalog.html
@@ -36,7 +36,7 @@
 </head>
 <body>
 
-  <nav>
+<nav>
     <span id="navLinkSpan"> <span>[</span> <a
         href="/"
         class="coloredIcon"
@@ -44,13 +44,29 @@
         href="/boards.js"
         class="coloredIcon"
         id="navBoardList">Boards</a> <span>/</span> <a
-        href="/overboard"
+        href="/.static/globalRules.html"
         class="coloredIcon"
-        id="navOverboard">Overboard</a> <span>/</span> <a
-        href="/.static/faq.html"
+        id="navOverboard">Rules</a> <span>]</span> <span>[</span> <a
+        href="/overboard/"
         class="coloredIcon"
-        id="navPosting">FAQ</a> <span>]</span>
+        id="navOverboard">All</a> <span>/</span> <a
+        href="/overboardsfw/"
+        class="coloredIcon"
+        id="navPosting">All SFW</a> <span>]</span>
     </span> <span id="navBoardsSpan"> </span> <span id="navOptionsSpan"> <span>[</span>
+      <a
+        href="#"
+        class="coloredIcon"
+        id="linkTop"></a> <span>/</span> <a
+        href="#footer"
+        class="coloredIcon"
+        id="linkBottom"></a> <span>/</span> <a
+        href="index.rss"
+        class="coloredIcon"
+        id="linkRss">RSS</a> <span>]</span>
+    </span>
+  </nav>
+
       <a
         href="#"
         class="coloredIcon"
