--- a/templates/pages/boardManagement.html
+++ b/templates/pages/boardManagement.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-  <nav>
+<nav>
     <span id="navLinkSpan"> <span>[</span> <a
         href="/"
         class="coloredIcon"
@@ -25,14 +25,17 @@
         href="/boards.js"
         class="coloredIcon"
         id="navBoardList">Boards</a> <span>/</span> <a
-        href="/overboard"
+        href="/.static/globalRules.html"
         class="coloredIcon"
-        id="navOverboard">Overboard</a> <span>/</span> <a
-        href="/.static/posting.html"
+        id="navOverboard">Rules</a> <span>]</span> <span>[</span> <a
+        href="/overboard/"
         class="coloredIcon"
-        id="navPosting">Help</a> <span>]</span>
-    </span> <span id="navBoardsSpan"> </span> <span id="navOptionsSpan"> </span>
-  </nav>
+        id="navOverboard">All</a> <span>/</span> <a
+        href="/overboardsfw/"
+        class="coloredIcon"
+        id="navPosting">All SFW</a> <span>]</span>
+    </span> <span id="navBoardsSpan"> </span> <span id="navOptionsSpan"> <span></span>
+</nav>
 
   <header>
     <img
