--- a/templates/pages/overboard.html
+++ b/templates/pages/overboard.html
@@ -34,9 +34,9 @@
   type="text/css"
   rel="stylesheet" />
 </head>
-<body style="padding-bottom: 250px;">
+<body>
 
-  <nav>
+<nav>
     <span id="navLinkSpan"> <span>[</span> <a
         href="/"
         class="coloredIcon"
@@ -44,10 +44,27 @@
         href="/boards.js"
         class="coloredIcon"
         id="navBoardList">Boards</a> <span>/</span> <a
-        href="/.static/posting.html"
+        href="/.static/globalRules.html"
         class="coloredIcon"
-        id="navPosting">Help</a> <span>]</span>
-    </span> <span id="navBoardsSpan"> </span> <span id="navOptionsSpan"> </span>
+        id="navOverboard">Rules</a> <span>]</span> <span>[</span> <a
+        href="/overboard/"
+        class="coloredIcon"
+        id="navOverboard">All</a> <span>/</span> <a
+        href="/overboardsfw/"
+        class="coloredIcon"
+        id="navPosting">All SFW</a> <span>]</span>
+    </span> <span id="navBoardsSpan"> </span> <span id="navOptionsSpan"> <span>[</span>
+      <a
+        href="#"
+        class="coloredIcon"
+        id="linkTop"></a> <span>/</span> <a
+        href="#footer"
+        class="coloredIcon"
+        id="linkBottom"></a> <span>/</span> <a
+        href="index.rss"
+        class="coloredIcon"
+        id="linkRss">RSS</a> <span>]</span>
+    </span>
   </nav>
 
   <header class="boardHeader">
