Added donation page, with 3 different methods of donation. Fixed nav bar, and several other small bugs.

--- a/templates/pages/boards.html
+++ b/templates/pages/boards.html
@@ -27,7 +27,10 @@
         id="navBoardList">Boards</a> <span>/</span> <a
         href="/.static/globalRules.html"
         class="coloredIcon"
-        id="navRules">Rules</a> <span>]</span> <span>[</span> <a
+        id="navOverboard">Rules</a> <span>/</span> <a
+        href="/.static/donate.html"
+        class="coloredIcon"
+        id="navBoardList">Donate</a> <span>]</span> <span>[</span> <a
         class="coloredIcon"
         id="linkOverboard">All</a> <span>/</span> 
         <a id="linkSfwOver">All SFW</a><span><div id="navPosting" style="display:none"></div>]</span>
