--- a/templates/pages/board.html
+++ b/templates/pages/board.html
@@ -42,7 +42,10 @@
         id="navBoardList">Boards</a> <span>/</span> <a
         href="/.static/globalRules.html"
         class="coloredIcon"
-        id="navOverboard">Rules</a> <span>]</span> <span>[</span> <a
+        id="navOverboard">Rules</a> <span>/</span> <a
+        href="/.static/donate.html"
+        class="coloredIcon"
+        id="navBoardList">Donate</a> <span>]</span> <span>[</span> <a
         href="/overboard/"
         class="coloredIcon"
         id="navOverboard">All</a> <span>/</span> <a
@@ -50,6 +53,7 @@
         class="coloredIcon"
         id="navPosting">All SFW</a> <span>]</span>
     </span> <span id="navBoardsSpan"> </span> <span id="navOptionsSpan"> <span>[</span>
+
       <a
         href="#"
         class="coloredIcon"
