Fixed a long awaited bug, the exit button not appearing on the quick reply. Added several other small fixes.

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -236,6 +236,10 @@ nav span, nav a {
   content: "\e003";
 }
 
+#closeWatcherMenuButton::before, .close-btn::before, .watchedCellCloseButton::before {
+  content: '\e0db';
+}
+
 /* board list */
 #divPages {
   display: inline-block;
