--- a/static/css/watcher.css
+++ b/static/css/watcher.css
@@ -4,6 +4,7 @@
 
 #closeWatcherMenuButton::before, .close-btn::before,
   .watchedCellCloseButton::before {
+  font-family: 'Icons';
   content: '\e0db';
 }
 
