--- a/templates/pages/accounts.html
+++ b/templates/pages/accounts.html
@@ -57,13 +57,13 @@
           type="text"
           id="fieldLogin"
           name="login"
-          placeholder="login">
+          placeholder="Login">
 
         <input
           type="password"
           id="fieldPassword"
           name="password"
-          placeholder="password">
+          placeholder="Password">
 
         <input
           id="addAccountFormButton"
