--- a/templates/pages/board.html
+++ b/templates/pages/board.html
@@ -295,14 +295,15 @@
 </div>
     <hr>
 <div class = "topLinks">
-[<a href="/">Home</a>] [<a href="catalog.html">Catalog</a>]
+[<a href="/">Home</a>] [<a href="catalog.html">Catalog</a>] [<a href="#footer">Bottom</a>]
   </div>
   <div id="threadList">
 
       <div id="divThreads"></div>
 
       <hr class="clearer" />
-
+[<a href="/">Home</a>] [<a href="catalog.html">Catalog</a>] [<a href="#">Top</a>]
+<hr>
       <div class="threadPages">
 
         <span class="divPages">[ <a id="linkPrevious"></a> <span
