--- a/static/css/yotsuba.css
+++ b/static/css/yotsuba.css
@@ -47,14 +47,14 @@ nav {
     background-color: transparent;
 }
 #quick-reply table {
-    background-color: #D6DAF0;
-    border: none;
+    background-color: #FFFFEE;
+    border: 1px solid #800000;
 }
 #quick-reply table {
     padding: 0em;
 }
 #quick-reply th {
-    background-color: #9988EE;
+    background-color: #fca;
 }
 #divLatestPosts .latestPostCell {
     background: #F0E0D6;
