Fixed qr not being moveable, bug likely caused by accidental rollback of file.

--- a/templates/pages/thread.html
+++ b/templates/pages/thread.html
@@ -456,7 +456,7 @@
 
 
 <div class = "bottomLinks">
-[<a href="..">Return</a>] [<a href="../catalog.html">Catalog</a>] [<a href="#">Top</a>] [<a href="#null" id="refreshButton" onclick="refreshPosts(true)" value="Refresh">Update</a>]<div class="bottomPostReply" style="text-align: center">[<a href="#null" onclick="setQr()">Post a Reply</a>]</div>
+[<a href="..">Return</a>] [<a href="../catalog.html">Catalog</a>] [<a href="#">Top</a>] [<a href="#null" id="refreshButton" onclick="refreshPosts(true)" value="Refresh">Update</a>]<div class="bottomPostReply" style="text-align: center">[<a href="#null" onclick="showQr()">Post a Reply</a>]</div>
 <hr>
       <div id=boardContentLinks align="right">
         <span>[</span>
