--- a/templates/pages/overboard.html
+++ b/templates/pages/overboard.html
@@ -75,7 +75,9 @@
       id="bannerImage"
       src="/randomBanner.js" />
   </header>
-
+<center>
+<p id="randomQuote" class="nonBoardSubText" style="margin-top: 5px"></p>
+</center>
 <hr>
 
 <div class = "bAnnounce">
@@ -111,11 +113,8 @@
 [<a href="/">Return</a>] [<a href="#">Top</a>] [<a href="/overboard/">Refresh</a>]
 </div>
 <hr>
-
 <div class="footerBar" id="footerBarType" value="B"></div>
-
 </div>
-
 <script src="/.static/js/settings.js"></script>
 <script src="/.static/js/api.js"></script>
 <script src="/.static/js/overboard.js"></script>
@@ -136,6 +135,7 @@
 <script src="/.static/js/captchaModal.js"></script>
 <script src="/.static/js/favouriteBoards.js"></script>
 <script src="/.static/js/globalAnnouncement.js"></script>
+<script src="/.static/js/randomQuote.js"></script>
 <script src="/.static/js/footerInject.js"></script>
 
 </html>
