--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -100,7 +100,7 @@
       <span><b>Total posts:</b> <span id="labelTotalPosts"></span>
 </div>
 <div id="statBox">
-      <span><b>Total boards:</b> <span id="labelTotalBoards"></span>
+      <span><b>Media files stored:</b> <span id="labelTotalFiles"></span>
 </div>
 <div id="statBox">
       <span><b>Total media size:</b> <span id="labelTotalSize"></span>
@@ -108,6 +108,7 @@
 <div class="unusedStats">
       <span>Posts in last hour: <span id="labelTotalPPH"></span>
       <span>Media files stored: <span id="labelTotalFiles"></span>
+      <span><b>Total boards:</b> <span id="labelTotalBoards"></span>
       <span>Unique recent IPs: <span id="labelTotalIps"></span>
 </div>
     </div>
