--- a/templates/pages/boards.html
+++ b/templates/pages/boards.html
@@ -13,6 +13,10 @@
   href="/.static/css/boards.css"
   type="text/css"
   rel="stylesheet" />
+<link
+  href="/.static/css/watcher.css"
+  type="text/css"
+  rel="stylesheet" />
 <!-- Matomo -->
 <script type="text/javascript">
   var _paq = _paq || [];
