--- a/static/css/posting.css
+++ b/static/css/posting.css
@@ -6,7 +6,7 @@
 }
 
 .imgExpanded {
-  max-width: 100%;
+  max-width: 600px;
 }
 
 .reportFieldset {
@@ -143,6 +143,11 @@
 /*Change the dimensions if you wish for larger thumbs*/
 .uploadCell img:not(.imgExpanded) {
 
+}
+
+.innerPost img:not(.imgExpanded) {
+  max-width: 150px;
+  max-height: 150px;
 }
 
 .multipleUploads .opUploadPanel, .multipleUploads .panelUploads {
