Fixed several bugs pertaining to autofill.

--- a/templates/pages/board.html
+++ b/templates/pages/board.html
@@ -114,7 +114,8 @@
                 type="text"
                 size="25"
                 id="fieldName"
-                name="name">
+                name="name"
+                autocomplete="off">
             </td>
           </tr>
           <tr>
@@ -124,7 +125,8 @@
                 size="25"
                 type="text"
                 id="fieldEmail"
-                name="email">
+                name="email"
+		autocomplete="off">
             </td>
           </tr>
           <tr>
@@ -134,7 +136,8 @@
                 type="text"
                 size="25"
                 id="fieldSubject"
-                name="subject">
+                name="subject"
+		autocomplete="off">
 
               <button
                 type="submit"
@@ -180,7 +183,8 @@
                 type="password"
                 id="fieldPostingPassword"
                 name="password"
-                type="password">
+                type="password"
+		autocomplete="off">
               <span class="small">(Used to delete files and postings)</span>
               <div id="noFlagDiv">
                 <input
@@ -346,7 +350,8 @@
             <input
               type="password"
               id="deletionFieldPassword"
-              name="password">
+              name="password"
+	      autocomplete="off">
           </label>
           <label>
             <input
