--- a/templates/pages/thread.html
+++ b/templates/pages/thread.html
@@ -109,7 +109,8 @@
                 type="text"
                 size="25"
                 id="fieldName"
-                name="name">
+                name="name"
+		autocomplete="off">
             </td>
           </tr>
           <tr>
@@ -119,7 +120,8 @@
                 size="25"
                 type="text"
                 id="fieldEmail"
-                name="email">
+                name="email"
+		autocomplete="off">
             </td>
           </tr>
           <tr>
@@ -129,7 +131,8 @@
                 type="text"
                 size="25"
                 id="fieldSubject"
-                name="subject">
+                name="subject"
+		autocomplete="off">
 
               <button
                 type="submit"
@@ -178,7 +181,8 @@
                 size="12"
                 type="password"
                 id="fieldPostingPassword"
-                name="password">
+                name="password"
+		autocomplete="off">
               <span class="small">(used to delete files and postings)</span>
 
               <div id="noFlagDiv">
