Small annoying bug fixes.

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -92,9 +92,9 @@
 <ol style="list-style-type:none;">
 <li><b><u>SFW</u></b></li>
 <li><a href="/a/">Anime & Manga</a></li>
-<li><a href="/cry/">Video Games</a></li>
+<li><a href="/v/">Video Games</a></li>
 <li><a href="/meta/">Development and Feedback</a></li>
-<li><a href="/g/">Cryptocurrency and Buisness</a></li>
+<li><a href="/cry/">Cryptocurrency and Buisness</a></li>
 <li><a href="/v/">Video Games</a></li>
 </ol>
 </div>
