--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -93,8 +93,9 @@
 <li><b><u>SFW</u></b></li>
 <li><a href="/a/">Anime & Manga</a></li>
 <li><a href="/v/">Video Games</a></li>
+<li><a href="/cry/">Cryptocurrency and Business</a></li>
 <li><a href="/meta/">Development and Feedback</a></li>
-<li><a href="/cry/">Cryptocurrency and Buisness</a></li>
+<li><a href="/g/">Technology</a></li>
 <li><a href="/v/">Video Games</a></li>
 </ol>
 </div>
